Added some SSL Tests

--- a/monitor/Makefile
+++ b/monitor/Makefile
@@ -5,22 +5,23 @@
 # Parameters
 INSTDIR = /home/asethi/monitor/bin
 MONT = mont_cust
+CFLAGS = -g
 
 csrc = $(wildcard ssl/*.c)  \
 	$(wildcard common/*.c) 
 
 obj = $(csrc:.c=.o)
 
-LDFLAGS = -L../bin -lxmlparse -lexpat -lpthread
+LDFLAGS = -L../bin -lxmlparse -lexpat -lpthread -lssl
 
 # Targets 
 all : $(MONT)
 
 $(MONT): $(obj)
-	$(CXX) -o $@ $^ $(LDFLAGS)
+	$(CXX) -g -o $@ $^ $(LDFLAGS)
 
 clean:
-	$(RM) core* *.o MONT
+	$(RM) core* ssl/*.o mont_cust
 
 install:
 	cp $(MONT) ${INSTDIR}
