--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ mont_client
 mont_server
 mont_cust
 monitor/xmlparser/libxmlparse.a
+bin/libxmlparse.a
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
