--- a/bin/config.json
+++ b/bin/config.json
@@ -1,6 +1,7 @@
 "Params": "General"
 "custID": "100"
-"serverIP": "127.0.0.1"
+"#serverIP": "127.0.0.1"
+"serverIP": "192.168.1.107"
 
 "Params": "SSL"
 "sslPort": "4433"
@@ -12,7 +13,12 @@
 "totalHello": "20"
 
 "Params": "HTTP"
-"url":"www.yahoo.com"
+"#url":"http://www.a1.test2.com/200.txt"
+"url":"http://www.yahoo.com"
 "httpVerbose": "0"
+"httpSessions": "4"
 "httpParallel": "2"
 "pktSize": "200"
+
+"Params": "BGP"
+"routerID":192.168.1.100
