BGP Update messages work

--- a/bin/config.json
+++ b/bin/config.json
@@ -1,7 +1,7 @@
 "Params": "General"
 "custID": "100"
-"serverIP": "127.0.0.1"
-"#serverIP": "192.168.1.107"
+"#serverIP": "127.0.0.1"
+"serverIP": "192.168.1.107"
 
 "Params": "SSL"
 "sslPort": "4433"
@@ -24,13 +24,19 @@
 "routerID":192.168.1.100
 "withdrawn len": "9"
 "withdrawn prefix": "32"
-"withdrawn route": "1.2.3.4"
+"withdrawn route": "100.2.3.4"
 "withdrawn prefix": "24"
-"withdrawn route": "5.6.7"
-"path attribute len":"3"
-"path flag": "40"
-"path type": "2"
-"path len": "0"
+"withdrawn route": "5.6.7.0"
+"****Comment":"Path Attr Len is bytes following this field"
+"path attribute len":"11"
+"path flag": "64"
+"path type": "1"
+"path len": "1"
+"path value": "0"
+"path flag": "64"
+"path type": "3"
+"path len": "4"
+"path value nexthop": "192.168.1.0"
 "nlri len":"24"
 "nlri prefix":"1.2.0"
 
