Added BGP Update fixes

--- a/bin/config.json
+++ b/bin/config.json
@@ -28,15 +28,20 @@
 "withdrawn prefix": "24"
 "withdrawn route": "5.6.7.0"
 "****Comment":"Path Attr Len is bytes following this field"
-"path attribute len":"11"
+"path attribute len":"14"
 "path flag": "64"
 "path type": "1"
 "path len": "1"
 "path value": "0"
 "path flag": "64"
+"path type": "2"
+"path len": "0"
+"path value": "0"
+"path flag": "64"
 "path type": "3"
 "path len": "4"
 "path value nexthop": "192.168.1.0"
-"nlri len":"24"
-"nlri prefix":"1.2.0"
+"****Comment":"NLRI fields"
+"nlri len":"32"
+"nlri prefix":"100.101.102.103"
 
