--- a/bin/config.json
+++ b/bin/config.json
@@ -31,8 +31,9 @@
 "withdrawn route": "100.2.3.4"
 "withdrawn prefix": "24"
 "withdrawn route": "5.6.7.0"
-"****Comment":"Path Attr Len is bytes following this field"
-"path attribute len":"14"
+"****Comment":"Path Attr Len is bytes following this field - ignored"
+"****Comment":"Path Attr need to have all fields, F, T, L and Val in config"
+"path attribute len":"0"
 "path flag": "64"
 "path type": "1"
 "path len": "1"
