--- a/bin/config.json
+++ b/bin/config.json
@@ -1,7 +1,7 @@
 "Params": "General"
 "custID": "100"
-"#serverIP": "127.0.0.1"
-"serverIP": "192.168.1.107"
+"serverIP": "127.0.0.1"
+"#serverIP": "192.168.1.107"
 
 "Params": "SSL"
 "sslPort": "4433"
@@ -51,4 +51,4 @@
 "nlri len":"32"
 "nlri prefix":"100.101.102.103"
 "repeat nlri":"20"
-
+"repeat update":"1"
