Got the 1st pkt in openvpn working

--- a/monitor/Makefile
+++ b/monitor/Makefile
@@ -17,7 +17,7 @@ csrc = $(wildcard ssl/*.c)  \
 
 obj = $(csrc:.c=.o)
 
-LDFLAGS = -L../bin -ljsmn -lexpat -lpthread -lssl -lcurl
+LDFLAGS = -L../bin -ljsmn -lexpat -lpthread -lcrypto -lssl -lcurl
 
 # Targets 
 all : $(MONT)
